--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </div>
 
 <div class="slide">
-    <img src="./asset/img/Slider2.png" alt="" class = "slideimg">
+    <img src="./asset/img/slider2.png" alt="" class = "slideimg">
 </div>
 
 <div class="slide">
